mdapipkg/unpackaged/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Available_stock__c</fullName>
        <description>Comes from integration with Odoo</description>
        <label>Available stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <description>Comes from integration with Odoo</description>
        <label>Collection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odoo_ID__c</fullName>
        <externalId>true</externalId>
        <label>Odoo ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Retail_Price_ex_VAT__c</fullName>
        <description>Comes from integration with Odoo</description>
        <label>Retail Price ex VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>